@@ -1190,10 +1190,13 @@ static void CodeMACEXP(Word Index)
         Mod = eLstMacroExpRest; Set = True;
       }
       else
-        OK = False;
-      if (!OK)
+      {
+        Mod = eLstMacroExpNone; Set = False;
+      }
+      if (Mod == eLstMacroExpNone)
       {
         WrStrErrorPos(ErrNum_TooManyMacExpMod, pArg);
+        OK = False;
         break;
       }
       else if (!AddLstMacroExpMod(&LstMacroExpMod, Set, Mod))
