@@ -1122,6 +1122,8 @@ static void ConstStringVal(const tStrComp *pExpr, TempResult *pDest, Boolean *pR
           break;
         default:
           *pResult = True;
+          pStr = NULL;
+          TLen = 0;
           OK = False;
       }
       if (OK)
